--- a/DinoRoboto/DinoRoboto.csproj
+++ b/DinoRoboto/DinoRoboto.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
+    <Compile Include="Title.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
