--- a/DinoRoboto/DinoRoboto.csproj
+++ b/DinoRoboto/DinoRoboto.csproj
@@ -48,10 +48,13 @@
     <Compile Include="Dinosaur.cs" />
     <Compile Include="Fleet.cs" />
     <Compile Include="Herd.cs" />
+    <Compile Include="Hypsilophodon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Title.cs" />
+    <Compile Include="Triceratops.cs" />
+    <Compile Include="Tyrannosaur.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
