--- a/DinoRoboto/DinoRoboto.csproj
+++ b/DinoRoboto/DinoRoboto.csproj
@@ -51,10 +51,13 @@
     <Compile Include="Hypsilophodon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protectron.cs" />
+    <Compile Include="R2_D2.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Title.cs" />
     <Compile Include="Triceratops.cs" />
     <Compile Include="Tyrannosaur.cs" />
+    <Compile Include="T_800.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
